# arl_hw

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
cmake/Modules/: FindBCM2835.cmake
config/: driver.yaml
include/arl_hw/: ad5360.h  ad7616.h  ad7730.h  communication_device.h  datatypes.h  driver_utils.h  dummy.h  embedded_gpio.h  embedded_spi.h  jetson_tx1.h  jetson_tx1_gpio.h  jetson_tx1_spi.h  linux_platform.h  linux_platform_gpio.h  linux_platform_spi.h  raspberry_pi.h  raspberry_pi_gpio.h  raspberry_pi_spi.h  robot.h  rt_history.h  tinkerboard.h  tinkerboard_gpio.h  tinkerboard_spi.h
launch/: arl_robot_driver.launch
setup/: setup.sh
src/: ad5360.cpp  ad7616.cpp  ad7730.cpp  driver.cpp  driver_utils.cpp  dummy.cpp  jetson_tx1.cpp  jetson_tx1_gpio.cpp  jetson_tx1_spi.cpp  linux_platform.cpp  linux_platform_gpio.cpp  linux_platform_spi.cpp  raspberry_pi.cpp  raspberry_pi_gpio.cpp  raspberry_pi_spi.cpp  robot.cpp  rt_history.cpp  tinkerboard.cpp  tinkerboard_gpio.cpp  tinkerboard_spi.cpp
tests/: rpi_bcm2835_test.cpp  rpi_wiringpi_test.cpp
